--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
                     <a href="#">8 (495) 333-22-11</a>
                 </li>
                 <li>
-                    <a href="#">F</a>
+                    <a href="#">
+                        <img src="images/facebook.svg" alt="facebook">
+                    </a>
                 </li>
                 <li>
-                    <a href="#">IN</a>
+                    <a href="#">
+                        <img src="images/insta.svg" alt="instagram">
+                    </a>
                 </li>
             </ul>
             </div>
@@ -47,7 +51,7 @@
 
 </section>
 <section>
-    
+
 </section>
 </body>
 </html>
